fix: spacing in the landing

--- a/css/landing.css
+++ b/css/landing.css
@@ -53,7 +53,7 @@
     height: 100dvh;
     background: linear-gradient(to bottom, black, #00526f);
     z-index: -2;
-    padding-top: 8rem;
+    padding-top: 2rem;
     display: flex;
     flex-direction: column;
 }
@@ -66,6 +66,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
     width: 100%;
     color: #fff;
     font-family: 'JetBrains Mono', monospace;
@@ -76,7 +77,6 @@
 }
 
 .landing-content img {
-    margin-top: 20px;
     width: auto;
     height: 50vh;
     max-width: 100%;
@@ -91,7 +91,6 @@
 .version-text {
     font-size: 12vh;
     color: #b83157;
-    margin-top: 20px;
     opacity: 0; /* Initially hidden */
     transition: opacity 0.3s ease, margin-top 0.3s ease; /* Smooth transition for opacity and margin-top */
 }
@@ -101,7 +100,7 @@ h1.text-container {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    line-height: 0.8;
+    line-height: 0.5;
 }
 
 .welcome-text {
